<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="c0" type="id" />
    <item name="c1" type="id" />
    <item name="c2" type="id" />
    <item name="c3" type="id" />
    <item name="c4" type="id" />
    <item name="c5" type="id" />
    <item name="c6" type="id" />
    <item name="c7" type="id" />
    <item name="c8" type="id" />
    <item name="c9" type="id" />
    <item name="c10" type="id" />
    <item name="c11" type="id" />
    <item name="c12" type="id" />
    <item name="c13" type="id" />
    <item name="c14" type="id" />
    <item name="c15" type="id" />
    <item name="c16" type="id" />
    <item name="c17" type="id" />
    <item name="c18" type="id" />
    <item name="c19" type="id" />
    <item name="c20" type="id" />
    <item name="c21" type="id" />
    <item name="c22" type="id" />
    <item name="c23" type="id" />
    <item name="c24" type="id" />
    <item name="c25" type="id" />
    <item name="c26" type="id" />
    <item name="c27" type="id" />
    <item name="c28" type="id" />
    <item name="c29" type="id" />
    <item name="c30" type="id" />
    <item name="c31" type="id" />
    <item name="c32" type="id" />
    <item name="c33" type="id" />
    <item name="c34" type="id" />
    <item name="c35" type="id" />
</resources>