<resources>
    <string name="app_name">Game15</string>
    <string name="play">Play</string>
    <string name="rules">Rules</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>

    <string name="paused">Paused</string>
    <string name="restart">Restart</string>
    <string name="contin">Continue</string>

    <string name="win">You win!</string>
    <string name="min">minutes</string>
    <string name="sec">seconds</string>
    <string name="time">Your time:</string>
    <string name="toMenu">Back to menu</string>

    <string name="menu">Menu</string>
    <string name="solve">Solve</string>
    <string name="pause">Pause</string>
    <string name="chronometr">Time:</string>
</resources>
