...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="7dp">

        <Button
            android:id="@+id/menu_button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
...
            <!--android:text="@string/solve"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="15sp"-->
            <!--tools:ignore="HardcodedText" />-->

        <Button
            android:id="@+id/pause_button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
...
