...
            android:shadowRadius="@integer/shadowRadius"
            android:text="@string/easy"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/normal"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/buttonshape"
            android:fontFamily="@font/armata"
            android:shadowColor="@color/shadowColor"
...
